dataclients/kubernetes/testdata/ingressV1/external-name/all-allowed.yaml
apiVersion: zalando.org/v1
kind: Ingress
metadata:
  name: myapp
  namespace: default
spec:
  rules:
  - host: example.org
    http:
      paths:
      - path: /one
        pathType: ImplementationSpecific
        backend:
          service:
            name: external1
            port:
              name: ext
      - path: /two
        pathType: ImplementationSpecific
        backend:
          service:
            name: external2
            port:
              name: ext
---
apiVersion: v1
kind: Service
metadata:
  labels:
    application: myapp
  name: external1
spec:
  type: ExternalName
  externalName: external1.example.org
  ports:
  - name: ext
    port: 443
    protocol: TCP
    targetPort: 443
---
apiVersion: v1
kind: Service
metadata:
  labels:
    application: myapp
  name: external2
spec:
  type: ExternalName
  externalName: external2.example.org
  ports:
  - name: ext
    port: 443
    protocol: TCP
    targetPort: 443
